<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/activity_main_drawer_sign_out">

        <item
            android:id="@+id/nav_view_main_login"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/login" />

        <item
            android:id="@+id/nav_view_main_register"
            android:icon="@drawable/ic_baseline_app_registration_24"
            android:title="@string/register" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/activity_main_drawer_logged"
        android:visible="false">
        <item
            android:id="@+id/nav_view_main_add_ad"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/nav_view_add_your_ad" />
        <item
            android:id="@+id/nav_view_main_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/nav_view_profile" />

        <item
            android:id="@+id/nav_view_main_myAds"
            android:icon="@drawable/ic_baseline_chrome_reader_mode_24"
            android:title="@string/my_ads" />

        <item
            android:id="@+id/nav_view_main_logout"
            android:icon="@drawable/ic_baseline_app_registration_24"
            android:title="@string/nav_log_out" />
    </group>
</menu>